--- a/index.css
+++ b/index.css
@@ -147,14 +147,35 @@ body, html {
     flex-direction: column;
 }
 
-
-.homes {
+/* .homes {
     background: url(img/home.jpg);
-    background-size: cover;
-}
+    background-size: contain;
+    background-repeat: no-repeat;
+} */
 
 .display-area {
     grid-area: d;
+}
+
+img {
+    width: 100%;
+}
+
+.home1 {
+    display: flex;
+    flex-direction: column;
+    box-shadow: var(--shadow);
+    width: 20rem;
+}
+
+.description {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.address {
+    text-align: center;
 }
 
 footer {
