--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@
         border: 0;
     }
 
+    .btn2 {
+        color: var(--light);
+        background: var(--green);
+        padding: 0.6rem 1.3rem;
+        text-decoration: none;
+        border: 0;
+    }
+
     .btn:hover {
         background: var(--light);
         color: var(--dark);
@@ -60,7 +68,6 @@
     }
 
     .display-area {
-        height: 50rem;
         width: 100%;
     }
 
