--- a/index.css
+++ b/index.css
@@ -15,9 +15,9 @@
       cursor: pointer;
   }
 
-  img {
+  /* img {
     width: 100%;
-}
+} */
 
   .fa-facebook {
     color: var(--light);
@@ -133,13 +133,6 @@ body, html {
     'filler filler filler filler';
 }
 
-.display-area {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    grid-gap: 1rem;
-}
-
 .jumbotron-container {
     grid-area: j;
 }
@@ -166,11 +159,15 @@ body, html {
 }
 
 .display-area {
+    display: grid;
     grid-area: d;
-    overflow-x: auto;
+    overflow: scroll;
     white-space: nowrap;
     height: 19rem;
-    padding: 1rem;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    justify-content: space-around;
+    grid-gap: 1rem;
 }
 
 .homes {
@@ -178,6 +175,33 @@ body, html {
     flex-direction: column;
     box-shadow: var(--shadow);
     width: 15rem;
+}
+
+.home1-img {
+    width: 100%;
+}
+
+.home2-img {
+    width: 100%;
+    height: 100%;
+}
+
+.home3-img {
+    width: 100%;
+}
+
+.home4-img {
+    width: 100%;
+}
+
+.home-holder {
+    width: 100%;
+    height: 100%;
+}
+
+.home5-img {
+    width: 100%; 
+    height: 100%;
 }
 
 .description {
