--- a/index.css
+++ b/index.css
@@ -15,10 +15,6 @@
       cursor: pointer;
   }
 
-  /* img {
-    width: 100%;
-} */
-
   .fa-facebook {
     color: var(--light);
   }
@@ -44,6 +40,10 @@
     height: 3rem;
     width: 20rem;
     box-shadow: var(--shadow);
+}
+
+.general-info-list-items {
+    color: red;
 }
 
 body, html {
@@ -114,6 +114,7 @@ body, html {
 
 .nav-links {
     text-decoration: none;
+    color: var(--dark);
 }
 
 .container {
@@ -173,8 +174,9 @@ body, html {
     height: 19rem;
     grid-template-columns: repeat(5, 1fr);
     grid-auto-rows: minmax(100px, auto);
-    justify-content: space-around;
+    justify-content: space-between;
     grid-gap: 1rem;
+    padding: 1rem;
 }
 
 .display-area {
