Changed some CSS and removed AJAX call and replaced with Fetch.

--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@
 }
 
 .general-info-list-items {
-    color: red;
+    color:var(--primary);
 }
 
 body, html {
@@ -75,6 +75,7 @@ body, html {
 
 .logo a {
     text-decoration: none;
+    color: var(--dark)
 }
 
 .bottom-logo {
