--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @media screen and (min-width:768px) {
+    body, html {
+        overflow-x: hidden;
+    }
+
     .other-info {
         display: flex;
         justify-content: space-between;
