--- a/index.css
+++ b/index.css
@@ -1,81 +1,82 @@
 :root {
-    --primary: #ddd;
-    --dark: #333;
-    --light: #fff;
-    --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
-    --green: green;
-  }
+  --primary: #ddd;
+  --dark: #333;
+  --light: #fff;
+  --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+  --green: green;
+}
 
-  .btn2 {
-      color: var(--light);
-      background: var(--green);
-      padding: 0.6rem 1.3rem;
-      text-decoration: none;
-      border: 0;
-      cursor: pointer;
-  }
+.btn2 {
+  color: var(--light);
+  background: var(--green);
+  padding: 0.6rem 1.3rem;
+  text-decoration: none;
+  border: 0;
+  cursor: pointer;
+}
 
-  .fa-facebook {
-    color: var(--light);
-  }
+.fa-facebook {
+  color: var(--light);
+}
 
-  .fa-twitter {
-    color: var(--light);
-  }
+.fa-twitter {
+  color: var(--light);
+}
 
-  .fa-instagram {
-    color: var(--light);
-  }
-  
+.fa-instagram {
+  color: var(--light);
+}
+
 .fa-pinterest {
-    color: var(--light);    
+  color: var(--light);
 }
 
 .fa-home {
-    color: var(--dark);
+  color: var(--dark);
 }
 
 .search {
-    border: 1px solid black;
-    height: 3rem;
-    width: 20rem;
-    box-shadow: var(--shadow);
+  border: 1px solid black;
+  height: 3rem;
+  width: 20rem;
+  box-shadow: var(--shadow);
 }
 
 .general-info-list-items {
-    color:var(--primary);
+  color: var(--primary);
 }
 
-body, html {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .other-info {
-    display: none;
+  display: none;
 }
 
 .fa-bars {
-    color: red;
-    cursor: pointer;
+  color: red;
+  cursor: pointer;
 }
 
 .header {
-    display: flex;
-    padding: 1rem;
+  display: flex;
+  padding: 1rem;
 }
 
 .logo {
-    list-style-type: none;
-    font-size: 1.5rem;
+  list-style-type: none;
+  font-size: 1.5rem;
 }
 
 .logo a {
-    text-decoration: none;
-    color: var(--dark)
+  text-decoration: none;
+  color: var(--dark)
 }
 
 .bottom-logo {
@@ -83,207 +84,192 @@ body, html {
 }
 
 .spacer {
-    flex:1;
+  flex: 1;
 }
 
 .nav-list {
-    display: none;
-    list-style: none;
+  display: none;
+  list-style: none;
 }
 
 .show {
-    display: flex;
-    flex-direction: column;    
-    padding: 1rem;
-    opacity: 0;
-    animation: menu; 
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  opacity: 0;
+  animation: menu;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
 }
 
 @keyframes menu {
-    from {opacity: 0;}
-    to {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .nav-items {
-    text-align: center;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-bottom:  1px solid black;
+  text-align: center;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid black;
 }
 
 .nav-links {
-    text-decoration: none;
-    color: var(--dark);
+  text-decoration: none;
+  color: var(--dark);
 }
 
 .container {
-    display: grid;
-    grid-gap: 1rem;
-    width: 100%;
-    height: 100%;
-    grid-template-areas: 
-    'j j j j'
-    'j j j j'
-    'j j j j'
-    'j j j j'
-    'j j j j'
-    'j j j j'
-    'd d d d'
-    'd d d d'
-    'd d d d'
-    'd d d d'
-    'd d d d'
-    'd d d d'
-    'f f f f'
-    'f f f f'
-    'filler filler filler filler'
-    'filler filler filler filler'
-    'filler filler filler filler'
-    'filler filler filler filler';
+  display: grid;
+  grid-gap: 1rem;
+  width: 100%;
+  height: 100%;
+  grid-template-areas: 'j j j j' 'j j j j' 'j j j j' 'j j j j' 'j j j j' 'j j j j' 'd d d d' 'd d d d' 'd d d d' 'd d d d' 'd d d d' 'd d d d' 'f f f f' 'f f f f' 'filler filler filler filler' 'filler filler filler filler' 'filler filler filler filler' 'filler filler filler filler';
 }
 
 .jumbotron-container {
-    grid-area: j;
+  grid-area: j;
 }
 
 .jumbotron {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    background: url(img//jumbo.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: var(--light);
-    z-index: -1;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  background: url(img//jumbo.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: var(--light);
+  z-index: -1;
 }
 
 .search-homes {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .available {
-    text-align: center;
+  text-align: center;
 }
 
 .display-area {
-    display: grid;
-    grid-area: d;
-    height: 19rem;
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    justify-content: space-between;
-    grid-gap: 1rem;
-    padding: 1rem;
+  display: grid;
+  grid-area: d;
+  height: 19rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  justify-content: space-between;
+  grid-gap: 1rem;
+  padding: 1rem;
 }
 
 .display-area {
-    overflow-x: scroll;
-    overflow-y: hidden;   
-    white-space: nowrap; 
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
 }
 
 .homes {
-    display: flex;
-    flex-direction: column;
-    box-shadow: var(--shadow);
-    width: 15rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: var(--shadow);
+  width: 15rem;
 }
 
 .home1-img {
-    width: 100%;
+  width: 100%;
 }
 
 .home2-img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .home3-img {
-    width: 100%;
+  width: 100%;
 }
 
 .home4-img {
-    width: 100%;
+  width: 100%;
 }
 
 .home-holder {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .home5-img {
-    width: 100%; 
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .description {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .address {
-    text-align: center;
+  text-align: center;
 }
 
 footer {
-    grid-area: f;
-
+  grid-area: f;
 }
 
 .filler {
-    grid-area: filler;
-    width: 100%;
+  grid-area: filler;
+  width: 100%;
 }
 
 footer {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .general-info {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .general-info-list {
-    display:flex;
-    flex-wrap: wrap;
-    border: 1px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid black;
 }
 
 .general-info-items {
-    padding: 1rem;
-    list-style-type: none;
+  padding: 1rem;
+  list-style-type: none;
 }
 
 .general-info-items a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .copy {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .social {
-    order: -1;
-    display: flex;
-    justify-content: space-around;
-    padding: 1rem;
-    background: var(--dark);
+  order: -1;
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+  background: var(--dark);
 }
 
 .social-list {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .filler {
-    background: var(--dark);
-    width: 100%;
-    height: 50%;
+  background: var(--dark);
+  width: 100%;
+  height: 50%;
 }
