--- a/style.css
+++ b/style.css
@@ -44,16 +44,22 @@
         font-size: 2rem;
     }
 
-    .nav-list {
+    .main-nav {
         display: flex;
         justify-content: space-around;
+        align-items: center;
         border-bottom: 1px solid rgba(175, 167, 167, 0.5);
     }
 
     .nav-items {
         padding: 0;
+        margin: 0;
         border-bottom: none;
     }   
+
+    .container {
+        margin-top: 1rem;
+    }
 
     .jumbotron-container {
         height: 30rem;
