--- a/style.css
+++ b/style.css
@@ -103,6 +103,16 @@
         margin-right: 1rem;
     }
 
+    .google-maps {
+        order: -1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        box-shadow: var(--shadow);
+        margin: 1.5rem;
+        height: 30rem;
+      }
+
     .general-info {
         order: -1;
     }
